feat: Recurrent concept drift API

--- a/notebooks/04_drift_streams.ipynb
+++ b/notebooks/04_drift_streams.ipynb
@@ -306,12 +306,104 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "037efff8-e5c4-49a2-91e0-4b09112be789",
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": [
+    "from capymoa.stream.drift import DriftStream, Drift, AbruptDrift, GradualDrift\n",
+    "from capymoa.stream.generator import SEA, HyperPlaneClassification, RandomTreeGenerator\n",
+    "from capymoa.classifier import OnlineBagging\n",
+    "from capymoa.evaluation import prequential_evaluation\n",
+    "from capymoa.evaluation.visualization import plot_windowed_results\n",
+    "\n",
+    "window_size = 1000\n",
+    "concept_length = 2000\n",
+    "max_instances = concept_length*6\n",
+    "\n",
+    "stream_with_drifts = DriftStream(stream=[\n",
+    "                                RandomTreeGenerator(tree_random_seed=1), AbruptDrift(position=concept_length*1),\n",
+    "                                RandomTreeGenerator(tree_random_seed=2), AbruptDrift(position=concept_length*2),\n",
+    "                                RandomTreeGenerator(tree_random_seed=3), AbruptDrift(position=concept_length*3),\n",
+    "                                RandomTreeGenerator(tree_random_seed=1, instance_random_seed=2), AbruptDrift(position=concept_length*4),\n",
+    "                                RandomTreeGenerator(tree_random_seed=2, instance_random_seed=2), AbruptDrift(position=concept_length*5),\n",
+    "                                RandomTreeGenerator(tree_random_seed=3, instance_random_seed=2),\n",
+    "                                ])\n",
+    "\n",
+    "\n",
+    "OB = OnlineBagging(schema=stream_with_drifts.get_schema(), ensemble_size=10)\n",
+    "\n",
+    "results_stream_with_drifts_OB = prequential_evaluation(stream=stream_with_drifts, learner=OB, window_size=window_size, max_instances=max_instances)\n",
+    "\n",
+    "print(f'Recurrent concept stream CapyMOA:\\n{stream_with_drifts}')\n",
+    "print(f'Recurrent concept stream MOA CLI: \\n{stream_with_drifts._CLI}')\n",
+    "# print(f'\\nMOA command:')\n",
+    "# moa_evaluation_task = 'EvaluatePrequential'\n",
+    "# moa_evaluator = f'-e (WindowClassificationPerformanceEvaluator -w {window_size})'\n",
+    "# print(f'{moa_evaluation_task} -l (meta.OzaBag {OB.CLI}) -s (ConceptDriftStream {stream_with_drifts._CLI} ) {moa_evaluator} -i {max_instances} -f {window_size}')\n",
+    "# print()\n",
+    "# print(f'{results_stream_with_drifts_OB[\"windowed\"].metrics_per_window()[\"classifications correct (percent)\"]}')\n",
+    "\n",
+    "plot_windowed_results(results_stream_with_drifts_OB)"
+   ],
+   "id": "4b00922ed5e2ff20"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "from capymoa.stream.drift import DriftStream, Drift, AbruptDrift, GradualDrift, RecurrentConceptDriftStream\n",
+    "from capymoa.stream.generator import SEA, HyperPlaneClassification, RandomTreeGenerator\n",
+    "from capymoa.classifier import OnlineBagging\n",
+    "from capymoa.evaluation import prequential_evaluation\n",
+    "from capymoa.evaluation.visualization import plot_windowed_results\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "# concept1 = SEA(function=1)\n",
+    "# concept2 = SEA(function=2)\n",
+    "# concept3 = SEA(function=3)\n",
+    "\n",
+    "concept1 = RandomTreeGenerator(tree_random_seed=1, instance_random_seed=1)\n",
+    "concept2 = RandomTreeGenerator(tree_random_seed=2, instance_random_seed=1)\n",
+    "concept3 = RandomTreeGenerator(tree_random_seed=3, instance_random_seed=1)\n",
+    "\n",
+    "# concept1 = HyperPlaneClassification(number_of_drifting_attributes=1)\n",
+    "# concept2 = HyperPlaneClassification(number_of_drifting_attributes=2)\n",
+    "# concept3 = HyperPlaneClassification(number_of_drifting_attributes=3)\n",
+    "\n",
+    "\n",
+    "window_size = 1000\n",
+    "concept_length = 2000\n",
+    "concept_list = [concept1, concept2, concept3]\n",
+    "concept_name_list = ['concept1', 'concept2', 'concept3']\n",
+    "max_recurrences_per_concept = 2\n",
+    "max_instances = concept_length * len(concept_list) * max_recurrences_per_concept\n",
+    "\n",
+    "stream_with_recurrent_concepts = RecurrentConceptDriftStream(concept_list=concept_list,\n",
+    "                                               max_recurrences_per_concept=max_recurrences_per_concept,\n",
+    "                                               transition_type_template=AbruptDrift(position=concept_length),\n",
+    "                                               concept_name_list=concept_name_list\n",
+    "                                               )\n",
+    "\n",
+    "OB = OnlineBagging(schema=stream_with_recurrent_concepts.get_schema(), ensemble_size=10)\n",
+    "\n",
+    "results_stream_with_drifts_OB = prequential_evaluation(stream=stream_with_recurrent_concepts, learner=OB, window_size=window_size, max_instances=max_instances)\n",
+    "\n",
+    "print(f'Recurrent concept stream CapyMOA:\\n{stream_with_recurrent_concepts}')\n",
+    "print(f'Recurrent concept stream MOA CLI: \\n{stream_with_recurrent_concepts._CLI}')\n",
+    "# print(f'\\nMOA command:')\n",
+    "# moa_evaluation_task = 'EvaluatePrequential'\n",
+    "# moa_evaluator = f'-e (WindowClassificationPerformanceEvaluator -w {window_size})'\n",
+    "# print(f'{moa_evaluation_task} -l (meta.OzaBag {OB.CLI}) -s (ConceptDriftStream {stream_with_recurrent_concepts._CLI} ) {moa_evaluator} -i {max_instances} -f {window_size}')\n",
+    "# print()\n",
+    "# print(f'{results_stream_with_drifts_OB[\"windowed\"].metrics_per_window()[[\"classifications correct (percent)\", \"classified instances\"]]}')\n",
+    "\n",
+    "plot_windowed_results(results_stream_with_drifts_OB)\n"
+   ],
+   "id": "a5abcef450938ba"
   }
  ],
  "metadata": {
