fix: final updates to notebooks

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -5,7 +5,7 @@
    "id": "a179cd16ae91dee3",
    "metadata": {},
    "source": [
-    "# Anomaly Detection\n",
+    "# 10. Anomaly Detection\n",
     "\n",
     "This notebook shows some basic usage of CapyMOA for Anomaly Detection tasks.\n",
     "\n",
@@ -13,7 +13,7 @@
     "\n",
     "*More information about CapyMOA can be found in* https://www.capymoa.org\n",
     "\n",
-    "**last update on 05/06/2024**"
+    "**last update on 25/07/2024**"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8f7fd1e84afbb8a9",
    "metadata": {
     "ExecuteTime": {
@@ -50,11 +50,11 @@
    "source": [
     "from capymoa.datasets import ElectricityTiny\n",
     "from capymoa.anomaly import HalfSpaceTrees\n",
-    "from capymoa.evaluation import AUCEvaluator\n",
+    "from capymoa.evaluation import AnomalyDetectionEvaluator\n",
     "stream = ElectricityTiny()\n",
     "schema = stream.get_schema()\n",
     "learner = HalfSpaceTrees(schema)\n",
-    "evaluator = AUCEvaluator(schema)\n",
+    "evaluator = AnomalyDetectionEvaluator(schema)\n",
     "while stream.has_more_instances():\n",
     "    instance = stream.next_instance()\n",
     "    score = learner.score_instance(instance)\n",
@@ -64,6 +64,14 @@
     "auc = evaluator.auc()\n",
     "print(f\"AUC: {auc:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63fd40e2-4c23-46bd-beb0-044a23b91447",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
