fix: update to prequential results and notebooks

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -5,7 +5,7 @@
    "id": "a179cd16ae91dee3",
    "metadata": {},
    "source": [
-    "# 10. Anomaly Detection\n",
+    "# Anomaly Detection\n",
     "\n",
     "This notebook shows some basic usage of CapyMOA for Anomaly Detection tasks.\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8f7fd1e84afbb8a9",
    "metadata": {
     "ExecuteTime": {
