fix: clustering improvements

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dbaf538f",
+   "metadata": {},
+   "source": [
+    "# Clustering tutorial "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "be9c2a9d",
@@ -11,6 +19,18 @@
     "from capymoa.stream.generator import RandomRBFGeneratorDrift\n",
     "from moa.clusterers.clustream import Clustream\n",
     "from capymoa.evaluation.visualization import plot_clustering_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f191e28d",
+   "metadata": {},
+   "source": [
+    "## 1. Getting started example\n",
+    "\n",
+    "- Here we use only a stream and a clusterer\n",
+    "- We implement the loop manually\n",
+    "- We use a visualization function to print the clustering state"
    ]
   },
   {
@@ -93,61 +113,8 @@
     "    instancesSeen += 1\n",
     "    if instancesSeen % updateInterval == 0:\n",
     "        print(f\"Processed {instancesSeen} instances.\")\n",
-    "        # by default, show only\n",
-    "        plot_clustering_state(clustream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "407f43d0",
-   "metadata": {},
-   "source": [
-    "#### Issue with cluster id in MOA CluStream, it auto-updates\n",
-    "Next cell prints the microclusters from the Clusterer object twice without changing the model.\n",
-    "\n",
-    "While everything stays the same, the ids change."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "0940f798",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 [0.7027297664446033, 0.48436259505735557, 0.0] 243.0 id: 220.0\n",
-      "0 [0.6974195023636138, 0.047132011643317165, 0.0] 1.0 id: 221.0\n",
-      "0 [1.3843306797089867, -1.1195974718089243, 0.0] 7.0 id: 222.0\n",
-      "0 [0.9332892269417015, 0.18965577888570828, 1.0] 25.0 id: 223.0\n",
-      "0 [2.594958431363642, 0.542854884614332, 0.0] 3.0 id: 224.0\n",
-      "0 [-0.2954762950409765, -1.7866300787093923, 0.0] 2.0 id: 225.0\n",
-      "0 [0.08002810100754684, -0.2581958903238688, 0.0] 16.0 id: 226.0\n",
-      "0 [2.0626324089260955, -0.3333113490459889, 0.0] 1.0 id: 227.0\n",
-      "0 [-1.621637947418178, 0.4123311823612874, 0.0] 1.0 id: 228.0\n",
-      "0 [1.288276092609038, 1.6268924464685357, 0.0] 1.0 id: 229.0\n",
-      "\n",
-      "1 [0.7027297664446033, 0.48436259505735557, 0.0] 243.0 id: 230.0\n",
-      "1 [0.6974195023636138, 0.047132011643317165, 0.0] 1.0 id: 231.0\n",
-      "1 [1.3843306797089867, -1.1195974718089243, 0.0] 7.0 id: 232.0\n",
-      "1 [0.9332892269417015, 0.18965577888570828, 1.0] 25.0 id: 233.0\n",
-      "1 [2.594958431363642, 0.542854884614332, 0.0] 3.0 id: 234.0\n",
-      "1 [-0.2954762950409765, -1.7866300787093923, 0.0] 2.0 id: 235.0\n",
-      "1 [0.08002810100754684, -0.2581958903238688, 0.0] 16.0 id: 236.0\n",
-      "1 [2.0626324089260955, -0.3333113490459889, 0.0] 1.0 id: 237.0\n",
-      "1 [-1.621637947418178, 0.4123311823612874, 0.0] 1.0 id: 238.0\n",
-      "1 [1.288276092609038, 1.6268924464685357, 0.0] 1.0 id: 239.0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(2):\n",
-    "\tfor c in clustream.moa_learner.getMicroClusteringResult().getClustering():\n",
-    "\t\tprint(i, c.getCenter(), c.getWeight(), 'id:', c.getId())\n",
-    "\tprint()"
+    "        plot_clustering_state(clustream)\n",
+    "        # by default, plot_clustering_state only shows the image and does not save it"
    ]
   },
   {
@@ -155,12 +122,12 @@
    "id": "c4d44444",
    "metadata": {},
    "source": [
-    "## testing the new evaluator\n"
+    "## 2. Using the Clustering Evaluator\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2d6ddaef",
    "metadata": {},
    "outputs": [],
@@ -170,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e722a7b7",
    "metadata": {},
    "outputs": [],
@@ -185,12 +152,12 @@
    "id": "f2c64c25",
    "metadata": {},
    "source": [
-    "### we can still plot the clustering state of a clusterer on demand"
+    "### 2.1 It is still possible to plot the clustering state of a clusterer on demand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4e061611",
    "metadata": {},
    "outputs": [
@@ -220,171 +187,29 @@
    "id": "15817d70",
    "metadata": {},
    "source": [
-    "### we can also plot the evaluation results as a whole, generating the gif\n"
+    "### 2.2 Alternatively,  it is possible to plot the evaluation results as a whole, generating a gif\n",
+    "\n",
+    "- Passing `clean_up=False` to the `plot_clustering_evolution` function will keep the intermediate figures used to create the gif.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "92395ae6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from capymoa.evaluation.visualization import plot_clustering_evolution\n",
-    "plot_clustering_evolution(evaluator)"
+    "plot_clustering_evolution(evaluator, clean_up=True)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6facc264",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d01ceca9",
    "metadata": {},
-   "source": [
-    "---\n",
-    "## Brainstorm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f222bb72",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "stream = Electricity()\n",
-    "\n",
-    "clustream = Clustream(schema=stream.get_schema())\n",
-    "\n",
-    "evaluator = ClustererEvaluator(..., ...)\n",
-    "\n",
-    "\n",
-    "\n",
-    "grace_period = 100\n",
-    "\n",
-    "while stream.has_more_instances(): \n",
-    "    \n",
-    "    instance = stream.next_instance()\n",
-    "    \n",
-    "    clustream.train(instance)\n",
-    "    # cluster_that_this_belongs_to_ID = clustream.cluster_assignment(instance) # also updates micro-cluster with y information\n",
-    "\n",
-    "    evaluator.update(instance, clustream)\n",
-    "    # clustream.cluster_assignment(instance.X) --> update the purity of given micro-cluster? \n",
-    "\n",
-    "    # evaluator.micro_clusters_purity_assignments -> 0: [0,1,0,0,0,1], 12: [0,0,0], 32: [1,1,1,0]\n",
-    "    \n",
-    "\n",
-    "    if i % grace_period == 0:\n",
-    "        evaluator.get_metrics(clustream)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76357a9a",
-   "metadata": {},
-   "source": [
-    "\n",
-    "stream = Electricity()\n",
-    "clustream = Clustream(schema=stream.get_schema())\n",
-    "\n",
-    "grace_period = 100\n",
-    "while stream.has_more_instances(): \n",
-    "    instance = stream.next_instance()\n",
-    "    clustream.train(instance)\n",
-    "\n",
-    "plot_clusters(clustream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dceccda3",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "import numpy as np\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import accuracy_score, adjusted_rand_score, normalized_mutual_info_score\n",
-    "from sklearn.datasets import load_iris\n",
-    "from scipy.stats import mode\n",
-    "\n",
-    "# Load dataset\n",
-    "data = load_iris()\n",
-    "X = data.data\n",
-    "y = data.target\n",
-    "\n",
-    "# Apply KMeans clustering\n",
-    "kmeans = KMeans(n_clusters=3, random_state=42)\n",
-    "kmeans.fit(X)\n",
-    "cluster_labels = kmeans.labels_\n",
-    "\n",
-    "# Function to calculate purity\n",
-    "def purity_score(y_true, y_pred):\n",
-    "    # Compute confusion matrix\n",
-    "    contingency_matrix = np.array([[np.sum(y_pred[y_true == i] == j) for j in np.unique(y_pred)] for i in np.unique(y_true)])\n",
-    "    return np.sum(np.amax(contingency_matrix, axis=0)) / np.sum(contingency_matrix)\n",
-    "\n",
-    "# Calculate purity\n",
-    "purity = purity_score(y, cluster_labels)\n",
-    "print(f'Purity: {purity}')\n",
-    "\n",
-    "# Calculate other evaluation metrics\n",
-    "ari = adjusted_rand_score(y, cluster_labels)\n",
-    "nmi = normalized_mutual_info_score(y, cluster_labels)\n",
-    "\n",
-    "print(f'Adjusted Rand Index: {ari}')\n",
-    "print(f'Normalized Mutual Information: {nmi}')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e82bbb2a",
-   "metadata": {},
-   "source": [
-    "# Clusterer:\n",
-    "#    train(instance: Instance)\n",
-    "# MOAClusterer(Clusterer)\n",
-    "\n",
-    "# Clustream(MOAClusterer)\n",
-    "# ClustererEvaluator\n",
-    "#    __init__(grace_period=1000)\n",
-    "#    update(instance: LabeledInstance, clusterer: Clusterer, force_update: bool = False)\n",
-    "#        --> update internal grace_period to determine when to update metrics. \n",
-    "#    sillhouette_score()\n",
-    "\n",
-    "stream = Electricity()\n",
-    "\n",
-    "clustream = Clustream(schema=stream.get_schema())\n",
-    "\n",
-    "evaluator = ClustererEvaluator(..., calculate_purity=True)\n",
-    "\n",
-    "\n",
-    "grace_period = 100\n",
-    "\n",
-    "while stream.has_more_instances(): \n",
-    "    \n",
-    "    instance = stream.next_instance()\n",
-    "    \n",
-    "    clustream.train(instance)\n",
-    "\n",
-    "    evaluator.update(instance, clustream) # store in ClustererEvaluator the mapping between instance (ID?) and label\n",
-    "\n",
-    "    \n",
-    "    if i % grace_period == 0:\n",
-    "        evaluator.get_metrics(clustream)\n",
-    "\n",
-    "\n",
-    "class ClustererEvaluator:\n",
-    "    update(...)\n",
-    "\n",
-    "    purity(self,...):\n",
-    "        # Implements the purity calculation given that calculate_purity==True\n",
-    "\n",
-    "    silhouette_score(self, ...):\n",
-    "        MOA_evaluator.silhouette_score(...)\n",
-    "        \n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
