test: stop skipping notebooks in CI/CD pipeline

--- a/notebooks/save_and_load_model.ipynb
+++ b/notebooks/save_and_load_model.ipynb
@@ -34,6 +34,12 @@
     "ExecuteTime": {
      "end_time": "2024-05-29T08:18:33.715465Z",
      "start_time": "2024-05-29T08:18:27.317959Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:41:13.858240Z",
+     "iopub.status.busy": "2024-09-23T00:41:13.857963Z",
+     "iopub.status.idle": "2024-09-23T00:41:16.858732Z",
+     "shell.execute_reply": "2024-09-23T00:41:16.857804Z"
     }
    },
    "outputs": [
@@ -57,7 +63,7 @@
     "results = prequential_evaluation(stream=stream, learner=learner, max_instances=5000)\n",
     "\n",
     "print(f\"Accuracy: {results['cumulative'].accuracy():.2f}\")\n",
-    "save_model(learner, \"capymoa_ARF_model.pkl\") # Save model to capymoa_model.pkl"
+    "save_model(learner, \"capymoa_ARF_model.pkl\")  # Save model to capymoa_model.pkl"
    ]
   },
   {
@@ -80,6 +86,12 @@
     "ExecuteTime": {
      "end_time": "2024-05-29T08:18:37.737826Z",
      "start_time": "2024-05-29T08:18:33.717028Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:41:16.861619Z",
+     "iopub.status.busy": "2024-09-23T00:41:16.861317Z",
+     "iopub.status.idle": "2024-09-23T00:41:17.298273Z",
+     "shell.execute_reply": "2024-09-23T00:41:17.297752Z"
     }
    },
    "outputs": [
@@ -87,24 +99,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The saved model size: 618.28 KB\n",
-      "Updated accuracy: 89.32\n"
+      "The saved model size: 618.27 KB\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated accuracy: 89.30\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "model_file = 'capymoa_ARF_model.pkl'\n",
+    "model_file = \"capymoa_ARF_model.pkl\"\n",
     "\n",
     "model_size = os.path.getsize(model_file)\n",
     "print(f\"The saved model size: {model_size / 1024:.2f} KB\")\n",
     "\n",
-    "restored_learner = load_model(\"capymoa_ARF_model.pkl\")  # Load model from capymoa_model.pkl\n",
+    "restored_learner = load_model(\n",
+    "    \"capymoa_ARF_model.pkl\"\n",
+    ")  # Load model from capymoa_model.pkl\n",
     "\n",
     "# Train for more 50k instances on the restored model\n",
-    "results = prequential_evaluation(stream=stream, learner=restored_learner, max_instances=5000)\n",
-    "    \n",
+    "results = prequential_evaluation(\n",
+    "    stream=stream, learner=restored_learner, max_instances=5000\n",
+    ")\n",
+    "\n",
     "print(f\"Updated accuracy: {results['cumulative'].accuracy():.2f}\")"
    ]
   },
@@ -126,6 +148,12 @@
     "ExecuteTime": {
      "end_time": "2024-05-29T08:18:37.977906Z",
      "start_time": "2024-05-29T08:18:37.739209Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:41:17.300543Z",
+     "iopub.status.busy": "2024-09-23T00:41:17.300322Z",
+     "iopub.status.idle": "2024-09-23T00:41:17.303919Z",
+     "shell.execute_reply": "2024-09-23T00:41:17.303406Z"
     }
    },
    "outputs": [
