--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -24,7 +24,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "78dc8927-1bc3-4ce2-b352-ecf50ab56480",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:17.111388Z",
+     "iopub.status.busy": "2024-09-23T00:36:17.110715Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.895695Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.895080Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -53,7 +60,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "3406740a-f265-4434-aae8-05db48de7e56",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:18.898214Z",
+     "iopub.status.busy": "2024-09-23T00:36:18.897571Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.902736Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.902276Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data_stream = np.random.randint(2, size=2000)\n",
@@ -73,22 +87,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "bca87b8f-91f3-4eaf-a011-e8b274bda1f5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:18.904373Z",
+     "iopub.status.busy": "2024-09-23T00:36:18.904229Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.978304Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.977827Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADWIN                       1\n",
+      "ADWIN                       2\n",
       "CUSUM                       2\n",
       "DDM                         1\n",
       "EWMAChart                   1\n",
       "GeometricMovingAverage      1\n",
-      "HDDMAverage               154\n",
-      "HDDMWeighted               92\n",
-      "PageHinkley                 2\n",
+      "HDDMAverage               135\n",
+      "HDDMWeighted               96\n",
+      "PageHinkley                 1\n",
       "RDDM                        1\n",
-      "SEED                        3\n",
+      "SEED                        2\n",
       "STEPD                       1\n",
       "dtype: int64\n"
      ]
@@ -99,7 +120,6 @@
     "\n",
     "n_detections = {k: 0 for k in all_detectors}\n",
     "for detector_name in all_detectors:\n",
-    "\n",
     "    detector = getattr(detectors, detector_name)()\n",
     "\n",
     "    for i in range(2000):\n",
@@ -122,13 +142,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "5c9ade00-778f-481c-a51c-49dd199cd145",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:18.979938Z",
+     "iopub.status.busy": "2024-09-23T00:36:18.979792Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.988386Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.987988Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Change detected in data: 10 - at index: 1023\n"
+      "Change detected in data: 7 - at index: 1023\n"
      ]
     }
    ],
@@ -140,14 +167,23 @@
     "for i in range(2000):\n",
     "    detector.add_element(data_stream[i])\n",
     "    if detector.detected_change():\n",
-    "        print('Change detected in data: ' + str(data_stream[i]) + ' - at index: ' + str(i))\n"
+    "        print(\n",
+    "            \"Change detected in data: \" + str(data_stream[i]) + \" - at index: \" + str(i)\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "id": "dcf26795-09bb-4508-ab36-878c4f145197",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:18.990341Z",
+     "iopub.status.busy": "2024-09-23T00:36:18.990193Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.994912Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.994588Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -169,7 +205,14 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "cd7ae6be-17cb-4dec-b630-32e41531b020",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:18.996401Z",
+     "iopub.status.busy": "2024-09-23T00:36:18.996264Z",
+     "iopub.status.idle": "2024-09-23T00:36:18.998880Z",
+     "shell.execute_reply": "2024-09-23T00:36:18.998499Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -191,7 +234,14 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "0b8a45e7-d983-4f69-a0d8-035619da3b11",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:19.000482Z",
+     "iopub.status.busy": "2024-09-23T00:36:19.000348Z",
+     "iopub.status.idle": "2024-09-23T00:36:19.002916Z",
+     "shell.execute_reply": "2024-09-23T00:36:19.002602Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -225,7 +275,14 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "598a89e7-8460-415f-8a92-6854509e4697",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:19.004592Z",
+     "iopub.status.busy": "2024-09-23T00:36:19.004339Z",
+     "iopub.status.idle": "2024-09-23T00:36:19.007935Z",
+     "shell.execute_reply": "2024-09-23T00:36:19.007478Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from capymoa.drift.eval_detector import EvaluateDetector"
@@ -235,7 +292,14 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "4a2df820-9314-42e8-bf37-575c837ffabe",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:19.009612Z",
+     "iopub.status.busy": "2024-09-23T00:36:19.009431Z",
+     "iopub.status.idle": "2024-09-23T00:36:19.011704Z",
+     "shell.execute_reply": "2024-09-23T00:36:19.011382Z"
+    }
+   },
    "outputs": [],
    "source": [
     "eval = EvaluateDetector(max_delay=200)"
@@ -255,7 +319,14 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "352a52da-71e0-4f7b-bf74-09230086b91a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-09-23T00:36:19.013324Z",
+     "iopub.status.busy": "2024-09-23T00:36:19.013183Z",
+     "iopub.status.idle": "2024-09-23T00:36:19.018266Z",
+     "shell.execute_reply": "2024-09-23T00:36:19.017952Z"
+    }
+   },
    "outputs": [
     {
      "data": {
