random search pipeline element

--- a/notebooks/03_pytorch.ipynb
+++ b/notebooks/03_pytorch.ipynb
@@ -876,7 +876,7 @@
     "            root=\"data\",\n",
     "            train=True,\n",
     "            download=True,\n",
-    "            transform=ToTensor()\n",
+    "            transform_instance=ToTensor()\n",
     "        )\n",
     "pytorch_stream = PytorchStream(dataset=pytorchDtaset)\n",
     "\n",
