--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a179cd16ae91dee3",
+   "metadata": {},
    "source": [
-    "# 0. Anomaly Detection with CapyMOA\n",
+    "# Anomaly Detection\n",
     "\n",
     "This notebook shows some basic usage of CapyMOA for Anomaly Detection tasks.\n",
     "\n",
@@ -12,29 +13,40 @@
     "\n",
     "*More information about CapyMOA can be found in* https://www.capymoa.org\n",
     "\n",
-    "**last update on 19/05/2024**"
-   ],
-   "id": "a179cd16ae91dee3"
+    "**last update on 05/06/2024**"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c190066b9765a7e7",
+   "metadata": {},
    "source": [
     "## 1. Unsupervised Anomaly Detection for data streams\n",
     "\n",
     "* Recent research has been focused on unsupervised anomaly detection for data streams, as it is often difficult to obtain labeled data for training.\n",
-    "* Instead of using evaluation functions such as **test-then-train loop**, we will show a basic loop from scratch to evaluate the model's performance."
-   ],
-   "id": "c190066b9765a7e7"
+    "* Instead of using evaluation functions such as **test-then-train loop**, we will show a basic loop from scratch to evaluate the model's performance.\n",
+    "* Please notice that lower scores indicate higher anomaly likelihood."
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8f7fd1e84afbb8a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T01:15:08.424694Z",
-     "start_time": "2024-05-20T01:15:08.189760Z"
+     "end_time": "2024-05-24T02:31:53.712036Z",
+     "start_time": "2024-05-24T02:31:51.410148Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC: 0.54\n"
+     ]
+    }
+   ],
    "source": [
     "from capymoa.datasets import ElectricityTiny\n",
     "from capymoa.anomaly import HalfSpaceTrees\n",
@@ -45,64 +57,32 @@
     "evaluator = AUCEvaluator(schema)\n",
     "while stream.has_more_instances():\n",
     "    instance = stream.next_instance()\n",
-    "    proba = learner.predict_proba(instance)\n",
-    "    evaluator.update(instance.y_index, proba)\n",
+    "    score = learner.score_instance(instance)\n",
+    "    evaluator.update(instance.y_index, score)\n",
     "    learner.train(instance)\n",
     "    \n",
     "auc = evaluator.auc()\n",
     "print(f\"AUC: {auc:.2f}\")"
-   ],
-   "id": "8f7fd1e84afbb8a9",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AUC: 0.54\n"
-     ]
-    }
-   ],
-   "execution_count": 2
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-20T01:12:04.982687Z",
-     "start_time": "2024-05-20T01:12:04.980906Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "28966d267979885f",
-   "outputs": [],
-   "execution_count": 4
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "5541f346dc4c42bc"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
