refactor(stream): use pythonic iterators for streams

--- a/notebooks/04_drift_streams.ipynb
+++ b/notebooks/04_drift_streams.ipynb
@@ -160,10 +160,10 @@
    ],
    "source": [
     "from capymoa.classifier import OnlineBagging\n",
-    "from capymoa.stream import Stream\n",
+    "from capymoa.stream import MOAStream\n",
     "from moa.streams import ConceptDriftStream\n",
     "\n",
-    "stream_sea2drift = Stream(\n",
+    "stream_sea2drift = MOAStream(\n",
     "    moa_stream=ConceptDriftStream(),\n",
     "    CLI=\"-s (ConceptDriftStream -s (generators.SEAGenerator -f 1) -d (generators.SEAGenerator -f 2) -p 5000 -w 1) -d (generators.SEAGenerator -f 3) -p 10000 -w 2000\",\n",
     ")\n",
