refactor: use python iterator instead of `next_instance`

--- a/notebooks/00_getting_started.ipynb
+++ b/notebooks/00_getting_started.ipynb
@@ -97,8 +97,7 @@
     "ob_learner = OnlineBagging(schema=elec_stream.get_schema(), ensemble_size=5)\n",
     "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
-    "while elec_stream.has_more_instances():\n",
-    "    instance = elec_stream.next_instance()\n",
+    "for instance in elec_stream:\n",
     "    prediction = ob_learner.predict(instance)\n",
     "    ob_learner.train(instance)\n",
     "    ob_evaluator.update(instance.y_index, prediction)\n",
