--- a/notebooks/save_and_load_model.ipynb
+++ b/notebooks/save_and_load_model.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b7ca1c5addd95ba3",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +63,9 @@
     "results = prequential_evaluation(stream=stream, learner=learner, max_instances=5000)\n",
     "\n",
     "print(f\"Accuracy: {results['cumulative'].accuracy():.2f}\")\n",
-    "save_model(learner, \"capymoa_ARF_model.pkl\")  # Save model to capymoa_model.pkl"
+    "\n",
+    "with open(\"capymoa_ARF_model.pkl\", \"wb\") as f:\n",
+    "    save_model(learner, f)"
    ]
   },
   {
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "2f7dd29e2ed65686",
    "metadata": {
     "ExecuteTime": {
@@ -99,13 +101,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The saved model size: 618.27 KB\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "The saved model size: 616.69 KB\n",
       "Updated accuracy: 89.30\n"
      ]
     }
@@ -118,9 +114,8 @@
     "model_size = os.path.getsize(model_file)\n",
     "print(f\"The saved model size: {model_size / 1024:.2f} KB\")\n",
     "\n",
-    "restored_learner = load_model(\n",
-    "    \"capymoa_ARF_model.pkl\"\n",
-    ")  # Load model from capymoa_model.pkl\n",
+    "with open(model_file, \"rb\") as f:\n",
+    "    restored_learner = load_model(f)\n",
     "\n",
     "# Train for more 50k instances on the restored model\n",
     "results = prequential_evaluation(\n",
@@ -142,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "e00a292713d154ee",
    "metadata": {
     "ExecuteTime": {
@@ -184,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capymoa",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
