style: run ruff

--- a/notebooks/01_evaluation.ipynb
+++ b/notebooks/01_evaluation.ipynb
@@ -855,8 +855,10 @@
     "    stream=stream, learner=ARF_learner, window_size=5000\n",
     ")\n",
     "\n",
-    "print(f\"{kNN_results['learner']} [cumulative] RMSE = {kNN_results['cumulative'].rmse()} and \\\n",
-    "    {ARF_results['learner']}  [cumulative] RMSE = {ARF_results['cumulative'].rmse()}\")\n",
+    "print(\n",
+    "    f\"{kNN_results['learner']} [cumulative] RMSE = {kNN_results['cumulative'].rmse()} and \\\n",
+    "    {ARF_results['learner']}  [cumulative] RMSE = {ARF_results['cumulative'].rmse()}\"\n",
+    ")\n",
     "\n",
     "plot_windowed_results(kNN_results, ARF_results, metric=\"rmse\")"
    ]
