--- a/notebooks/07_pipelines.ipynb
+++ b/notebooks/07_pipelines.ipynb
@@ -182,29 +182,31 @@
    "source": [
     "from capymoa.stream.preprocessing import MOATransformer\n",
     "from capymoa.stream.preprocessing import BasePipeline\n",
-    "from capymoa.stream import Stream\n",
     "from moa.streams.filters import AddNoiseFilter, NormalisationFilter\n",
-    "from moa.streams import FilteredStream\n",
     "\n",
     "elec_stream = Electricity()\n",
     "\n",
     "# Creating the transformers\n",
-    "normalisation_transformer = MOATransformer(schema=elec_stream.get_schema(), moa_filter=NormalisationFilter())\n",
-    "add_noise_transformer = MOATransformer(schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter())\n",
+    "normalisation_transformer = MOATransformer(\n",
+    "    schema=elec_stream.get_schema(), moa_filter=NormalisationFilter()\n",
+    ")\n",
+    "add_noise_transformer = MOATransformer(\n",
+    "    schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter()\n",
+    ")\n",
     "\n",
     "# Creating and populating the pipeline\n",
     "pipeline = BasePipeline()\n",
     "\n",
     "# Add the transformers to the pipeline. We can change the calls to add_transformer, as they return self\n",
-    "pipeline = (pipeline\n",
-    "            .add_transformer(normalisation_transformer)\n",
-    "            .add_transformer(add_noise_transformer))\n",
+    "pipeline = pipeline.add_transformer(normalisation_transformer).add_transformer(\n",
+    "    add_noise_transformer\n",
+    ")\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
     "\n",
     "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema()) \n",
+    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "while elec_stream.has_more_instances():\n",
     "    instance = elec_stream.next_instance()\n",
@@ -275,10 +277,12 @@
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
     "\n",
     "# Creating and populating the pipeline\n",
-    "pipeline = (ClassifierPipeline()\n",
-    "            .add_transformer(normalisation_transformer)\n",
-    "            .add_transformer(add_noise_transformer)\n",
-    "            .add_classifier(ob_learner))\n",
+    "pipeline = (\n",
+    "    ClassifierPipeline()\n",
+    "    .add_transformer(normalisation_transformer)\n",
+    "    .add_transformer(add_noise_transformer)\n",
+    "    .add_classifier(ob_learner)\n",
+    ")\n",
     "\n",
     "# Creating the evaluator\n",
     "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
@@ -360,7 +364,10 @@
     "from capymoa.evaluation import prequential_evaluation\n",
     "from capymoa.classifier import AdaptiveRandomForestClassifier\n",
     "from capymoa.evaluation.visualization import plot_windowed_results\n",
-    "from capymoa.stream.preprocessing import TransformerPipelineElement, ClassifierPipelineElement\n",
+    "from capymoa.stream.preprocessing import (\n",
+    "    TransformerPipelineElement,\n",
+    "    ClassifierPipelineElement,\n",
+    ")\n",
     "\n",
     "elec_stream = Electricity()\n",
     "\n",
@@ -374,19 +381,29 @@
     "    schema=normalisation_transformer.get_schema(), ensemble_size=5\n",
     ")\n",
     "\n",
-    "# Alternative syntax. \n",
+    "# Alternative syntax.\n",
     "## first create the pipeline elements\n",
     "normalisation_transformer_pe = TransformerPipelineElement(normalisation_transformer)\n",
-    "classifier_pe = ClassifierPipelineElement(AdaptiveRandomForestClassifier(schema=add_noise_transformer.get_schema(), ensemble_size=5))\n",
+    "classifier_pe = ClassifierPipelineElement(\n",
+    "    AdaptiveRandomForestClassifier(\n",
+    "        schema=add_noise_transformer.get_schema(), ensemble_size=5\n",
+    "    )\n",
+    ")\n",
     "## then pass them as a list to the pipeline initializer\n",
     "pipeline_arf = ClassifierPipeline([normalisation_transformer_pe, classifier_pe])\n",
     "\n",
-    "results_arf_pipeline = prequential_evaluation(stream=elec_stream, learner=pipeline_arf, window_size=4500)\n",
-    "results_arf_baseline = prequential_evaluation(stream=elec_stream, learner=arf, window_size=4500)\n",
+    "results_arf_pipeline = prequential_evaluation(\n",
+    "    stream=elec_stream, learner=pipeline_arf, window_size=4500\n",
+    ")\n",
+    "results_arf_baseline = prequential_evaluation(\n",
+    "    stream=elec_stream, learner=arf, window_size=4500\n",
+    ")\n",
     "\n",
     "print(f\"{arf}: {results_arf_baseline['cumulative'].accuracy()}\")\n",
     "print(f\"{pipeline_arf}: {results_arf_pipeline['cumulative'].accuracy()}\")\n",
-    "plot_windowed_results(results_arf_pipeline, results_arf_baseline, metric=\"accuracy\", figure_path=None)"
+    "plot_windowed_results(\n",
+    "    results_arf_pipeline, results_arf_baseline, metric=\"accuracy\", figure_path=None\n",
+    ")"
    ]
   },
   {
@@ -529,8 +546,12 @@
     "elec_stream = Electricity()\n",
     "\n",
     "# Creating the transformers\n",
-    "normalisation_transformer = MOATransformer(schema=elec_stream.get_schema(), moa_filter=NormalisationFilter())\n",
-    "add_noise_transformer = MOATransformer(schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter())\n",
+    "normalisation_transformer = MOATransformer(\n",
+    "    schema=elec_stream.get_schema(), moa_filter=NormalisationFilter()\n",
+    ")\n",
+    "add_noise_transformer = MOATransformer(\n",
+    "    schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter()\n",
+    ")\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
@@ -538,20 +559,28 @@
     "# Creating a drift detector\n",
     "drift_detector = ADWIN()\n",
     "\n",
+    "\n",
     "# Define a function that prepares the input of the drift detector\n",
-    "def label_equals_prediction(instance: LabeledInstance, prediction: LabelIndex) -> LabelIndex:\n",
+    "def label_equals_prediction(\n",
+    "    instance: LabeledInstance, prediction: LabelIndex\n",
+    ") -> LabelIndex:\n",
     "    label = instance.y_index\n",
     "    return int(label == prediction)\n",
     "\n",
+    "\n",
     "# Creating and populating the pipeline\n",
-    "pipeline = (ClassifierPipeline()\n",
-    "            .add_transformer(normalisation_transformer)\n",
-    "            .add_transformer(add_noise_transformer)\n",
-    "            .add_classifier(ob_learner)\n",
-    "            .add_drift_detector(drift_detector, get_drift_detector_input_func=label_equals_prediction))\n",
+    "pipeline = (\n",
+    "    ClassifierPipeline()\n",
+    "    .add_transformer(normalisation_transformer)\n",
+    "    .add_transformer(add_noise_transformer)\n",
+    "    .add_classifier(ob_learner)\n",
+    "    .add_drift_detector(\n",
+    "        drift_detector, get_drift_detector_input_func=label_equals_prediction\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema()) \n",
+    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "i = 0\n",
     "while elec_stream.has_more_instances():\n",
@@ -611,8 +640,12 @@
     "elec_stream = Electricity()\n",
     "\n",
     "# Creating the transformers\n",
-    "normalisation_transformer = MOATransformer(schema=elec_stream.get_schema(), moa_filter=NormalisationFilter())\n",
-    "add_noise_transformer = MOATransformer(schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter())\n",
+    "normalisation_transformer = MOATransformer(\n",
+    "    schema=elec_stream.get_schema(), moa_filter=NormalisationFilter()\n",
+    ")\n",
+    "add_noise_transformer = MOATransformer(\n",
+    "    schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter()\n",
+    ")\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
@@ -620,22 +653,29 @@
     "# Creating a drift detector\n",
     "drift_detector = ADWIN()\n",
     "\n",
+    "\n",
     "# Define a function that prepares the input of the drift detector\n",
-    "def first_feature_is_gt_zero(instance: LabeledInstance, prediction: LabelIndex) -> LabelIndex:\n",
+    "def first_feature_is_gt_zero(\n",
+    "    instance: LabeledInstance, prediction: LabelIndex\n",
+    ") -> LabelIndex:\n",
     "    feature_val = instance.x[0]\n",
     "    return int(feature_val > 0.0)\n",
     "\n",
+    "\n",
     "# Creating and populating the pipeline\n",
-    "pipeline = (ClassifierPipeline()\n",
-    "            .add_transformer(normalisation_transformer)\n",
-    "            # here, we add the drift detector after the normalization step\n",
-    "            .add_drift_detector(drift_detector, get_drift_detector_input_func=first_feature_is_gt_zero) \n",
-    "            .add_transformer(add_noise_transformer)\n",
-    "            .add_classifier(ob_learner)\n",
-    "           )\n",
+    "pipeline = (\n",
+    "    ClassifierPipeline()\n",
+    "    .add_transformer(normalisation_transformer)\n",
+    "    # here, we add the drift detector after the normalization step\n",
+    "    .add_drift_detector(\n",
+    "        drift_detector, get_drift_detector_input_func=first_feature_is_gt_zero\n",
+    "    )\n",
+    "    .add_transformer(add_noise_transformer)\n",
+    "    .add_classifier(ob_learner)\n",
+    ")\n",
     "\n",
     "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema()) \n",
+    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "i = 0\n",
     "while elec_stream.has_more_instances():\n",
@@ -718,8 +758,12 @@
     "elec_stream = Electricity()\n",
     "\n",
     "# Creating the transformers\n",
-    "normalisation_transformer = MOATransformer(schema=elec_stream.get_schema(), moa_filter=NormalisationFilter())\n",
-    "add_noise_transformer = MOATransformer(schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter())\n",
+    "normalisation_transformer = MOATransformer(\n",
+    "    schema=elec_stream.get_schema(), moa_filter=NormalisationFilter()\n",
+    ")\n",
+    "add_noise_transformer = MOATransformer(\n",
+    "    schema=normalisation_transformer.get_schema(), moa_filter=AddNoiseFilter()\n",
+    ")\n",
     "\n",
     "# Creating a learner\n",
     "ob_learner = OnlineBagging(schema=add_noise_transformer.get_schema(), ensemble_size=5)\n",
@@ -727,21 +771,29 @@
     "# Creating a drift detector\n",
     "drift_detector = ADWIN()\n",
     "\n",
+    "\n",
     "# Define a function that prepares the input of the drift detector\n",
-    "def label_equals_prediction(instance: LabeledInstance, prediction: LabelIndex) -> LabelIndex:\n",
+    "def label_equals_prediction(\n",
+    "    instance: LabeledInstance, prediction: LabelIndex\n",
+    ") -> LabelIndex:\n",
     "    label = instance.y_index\n",
     "    return int(label == prediction)\n",
     "\n",
+    "\n",
     "# Creating and populating the transformation pipeline\n",
-    "trafo_pipeline = (BasePipeline()\n",
-    "                  .add_transformer(normalisation_transformer)\n",
-    "                  .add_transformer(add_noise_transformer))\n",
+    "trafo_pipeline = (\n",
+    "    BasePipeline()\n",
+    "    .add_transformer(normalisation_transformer)\n",
+    "    .add_transformer(add_noise_transformer)\n",
+    ")\n",
     "\n",
     "# Creating and populating the prediction pipeline\n",
     "prediction_pipeline = ClassifierPipeline().add_classifier(ob_learner)\n",
     "\n",
     "# Creating and populating the drift detection pipeline\n",
-    "drift_pipeline = BasePipeline().add_drift_detector(drift_detector, get_drift_detector_input_func=label_equals_prediction)\n",
+    "drift_pipeline = BasePipeline().add_drift_detector(\n",
+    "    drift_detector, get_drift_detector_input_func=label_equals_prediction\n",
+    ")\n",
     "\n",
     "# Since pipelines themselves are pipeline elements, we can pass them to the initializer of an overall pipeline object\n",
     "pipeline = ClassifierPipeline([trafo_pipeline, prediction_pipeline, drift_pipeline])\n",
@@ -753,7 +805,7 @@
     "#             .add_pipeline_element(drift_pipeline))\n",
     "\n",
     "# Creating the evaluator\n",
-    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema()) \n",
+    "ob_evaluator = ClassificationEvaluator(schema=elec_stream.get_schema())\n",
     "\n",
     "i = 0\n",
     "while elec_stream.has_more_instances():\n",
