--- a/notebooks/SSL_example.ipynb
+++ b/notebooks/SSL_example.ipynb
@@ -840,7 +840,7 @@
    ],
    "source": [
     "from capymoa.stream.generator import SEA\n",
-    "from capymoa.stream.drift import *\n",
+    "from capymoa.stream.drift import DriftStream, AbruptDrift\n",
     "from capymoa.classifier import HoeffdingTree\n",
     "\n",
     "## Creating a stream with drift\n",
@@ -897,7 +897,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "capymoa",
    "language": "python",
    "name": "python3"
   },
@@ -911,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
