--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -134,8 +134,6 @@
     }
    ],
    "source": [
-    "from capymoa.drift.detectors import ADWIN\n",
-    "\n",
     "# detector = ADWIN(delta=0.001)\n",
     "\n",
     "for i in range(2000):\n",
@@ -354,7 +352,9 @@
     "detector = ABCD(model_id=\"pca\")\n",
     "\n",
     "## Opening a file as a stream\n",
-    "stream_change = np.hstack([np.random.uniform(0, 0.5, 3000), np.random.uniform(0.5, 1.0, 3000)])\n",
+    "stream_change = np.hstack(\n",
+    "    [np.random.uniform(0, 0.5, 3000), np.random.uniform(0.5, 1.0, 3000)]\n",
+    ")\n",
     "stream_nochange = np.random.uniform(0, 1.0, len(stream_change))\n",
     "stream = np.vstack([stream_change, stream_nochange]).T\n",
     "print(f\"A {stream.shape[-1]}-dimensional stream\")"
@@ -446,7 +446,7 @@
     }
    ],
    "source": [
-    "detector= ABCD(model_id=\"pca\", maximum_absolute_value=0.3)\n",
+    "detector = ABCD(model_id=\"pca\", maximum_absolute_value=0.3)\n",
     "\n",
     "i = 0\n",
     "loss_values = []\n",
