refactor(ocl): change project structure

--- a/notebooks/10_ocl.ipynb
+++ b/notebooks/10_ocl.ipynb
@@ -274,8 +274,8 @@
     }
    ],
    "source": [
-    "from capymoa.evaluation.ocl import ocl_train_eval_loop\n",
-    "from capymoa.datasets.ocl import SplitMNIST\n",
+    "from capymoa.ocl.evaluation import ocl_train_eval_loop\n",
+    "from capymoa.ocl.datasets import SplitMNIST\n",
     "\n",
     "stream = SplitMNIST()\n",
     "mlp = SimpleMLP(stream.schema, 64)\n",
