--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -9,16 +9,15 @@
     "\n",
     "In this tutorial, we show how to conduct drift detection using CapyMOA\n",
     "\n",
-    "* Usage example of several detectors\n",
+    "* Then test different drift detectors\n",
     "* Example using ADWIN\n",
-    "* Evaluating detectors based on known drift locations\n",
-    "* Multivariate drift detection using ABCD\n",
+    "* Evaluating detectors based on known drift location\n",
     "\n",
     "---\n",
     "\n",
     "*More information about CapyMOA can be found in* https://www.capymoa.org\n",
     "\n",
-    "**last update on 02/04/2025**"
+    "**last update on 25/07/2024**"
    ]
   },
   {
@@ -80,19 +79,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADWIN                       1\n",
-      "CUSUM                       2\n",
+      "ADWIN                       2\n",
+      "CUSUM                       1\n",
       "DDM                         1\n",
       "EWMAChart                   1\n",
       "GeometricMovingAverage      1\n",
-      "HDDMAverage               130\n",
-      "HDDMWeighted              100\n",
-      "PageHinkley                 2\n",
+      "HDDMAverage               126\n",
+      "HDDMWeighted               89\n",
+      "PageHinkley                 1\n",
       "RDDM                        2\n",
       "SEED                        2\n",
       "STEPD                       1\n",
       "ABCD                        1\n",
-      "STUDD                       0\n",
       "dtype: int64\n"
      ]
     }
@@ -102,9 +100,6 @@
     "\n",
     "n_detections = {k: 0 for k in all_detectors}\n",
     "for detector_name in all_detectors:\n",
-    "    if detector_name == 'STUDD':\n",
-    "        continue\n",
-    "        \n",
     "    detector = getattr(detectors, detector_name)()\n",
     "\n",
     "    for i in range(2000):\n",
@@ -133,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Change detected in data: 1 - at index: 25\n",
-      "Change detected in data: 11 - at index: 1009\n"
+      "Change detected in data: 1 - at index: 24\n",
+      "Change detected in data: 6 - at index: 1010\n"
      ]
     }
    ],
@@ -158,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "[1010, 2026, 3010]"
+       "[1011, 2025, 3011]"
       ]
      },
      "execution_count": 5,
@@ -180,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "[1009, 2024, 2025, 3009]"
+       "[1009, 1010, 2022, 2023, 2024, 3009, 3010]"
       ]
      },
      "execution_count": 6,
@@ -224,27 +219,27 @@
     "\n",
     "Assuming the drift locations are known, you can evaluate detectors using **EvaluateDetector** class\n",
     "\n",
-    "This class takes a parameter called **max_delay**, which is the maximum number of instances for which we consider a detector to have detected a change. After **max_delay** instances, we assume that the change is obvious and has been missed by the detector."
+    "This class takes a parameter called **max_delay**, which is the maximum number of instances for which we consider a detector to have detected a change. After **max_delay** instances, we assume that the change is obvious and have been missed by the detector."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "598a89e7-8460-415f-8a92-6854509e4697",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from capymoa.drift.eval_detector import EvaluateDriftDetector"
+    "from capymoa.drift.eval_detector import EvaluateDetector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4a2df820-9314-42e8-bf37-575c837ffabe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "drift_eval = EvaluateDriftDetector(max_delay=200)"
+    "eval = EvaluateDetector(max_delay=200)"
    ]
   },
   {
@@ -259,28 +254,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "352a52da-71e0-4f7b-bf74-09230086b91a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fp': 0,\n",
-       " 'tp': 1,\n",
-       " 'fn': 0,\n",
-       " 'precision': 1.0,\n",
-       " 'recall': 1.0,\n",
-       " 'episode_recall': 1.0,\n",
-       " 'f1': 1.0,\n",
-       " 'mdt': np.float64(11.0),\n",
-       " 'far': 0.0,\n",
-       " 'ar': 0.25,\n",
-       " 'n_episodes': 1,\n",
-       " 'n_alarms': 1}"
+       "mean_time_to_detect           11.0\n",
+       "missed_detection_ratio         0.0\n",
+       "mean_time_btw_false_alarms     NaN\n",
+       "no_alarms_per_episode          0.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +277,7 @@
     "trues = np.array([1000])\n",
     "preds = detector.detection_index\n",
     "\n",
-    "drift_eval.calc_performance(trues, preds, tot_n_instances=detector.idx)"
+    "eval.calc_performance(preds, trues)"
    ]
   },
   {
@@ -488,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
