--- a/notebooks/10_ocl.ipynb
+++ b/notebooks/10_ocl.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-26T04:06:01.663656Z",
@@ -197,12 +197,10 @@
     "        super().__init__(schema=schema)\n",
     "        self.reservoir = ReservoirSampler(reservoir_size, schema.get_num_attributes())\n",
     "        self.optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)\n",
-    "        self.model = model.to(device)\n",
-    "        self.device = device\n",
+    "        self.device = torch.device(device)\n",
+    "        self.model = model.to(self.device)\n",
     "\n",
-    "    def batch_train(self, x: np.ndarray, y: np.ndarray):\n",
-    "        x: Tensor = torch.from_numpy(x)\n",
-    "        y: Tensor = torch.from_numpy(y).long()\n",
+    "    def batch_train(self, x: Tensor, y: Tensor):\n",
     "        batch_size = x.shape[0]\n",
     "\n",
     "        self.reservoir.update(x, y)\n",
@@ -218,10 +216,9 @@
     "        self.optimizer.step()\n",
     "\n",
     "    @torch.no_grad()\n",
-    "    def batch_predict_proba(self, x: np.ndarray) -> np.ndarray:\n",
-    "        x: Tensor = torch.from_numpy(x).to(self.device)\n",
+    "    def batch_predict_proba(self, x: Tensor) -> Tensor:\n",
     "        y_hat: Tensor = self.model.forward(x)\n",
-    "        return y_hat.softmax(dim=1).cpu().numpy()\n",
+    "        return y_hat.softmax(dim=1)\n",
     "\n",
     "    def __str__(self) -> str:\n",
     "        return \"ExperienceReplay\""
@@ -569,13 +566,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_b5e0ba6688d541878a2dd1698d5b9b06",
-       "max": 4119.0,
-       "min": 0.0,
+       "max": 4119,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_083587860b754e4ba1e6d67bcd03001f",
        "tabbable": null,
        "tooltip": null,
-       "value": 4112.0
+       "value": 4112
       }
      },
      "2bf905ede3cb42fa9c2d51cd8ec518ec": {
