--- a/notebooks/drift_detection.ipynb
+++ b/notebooks/drift_detection.ipynb
@@ -102,9 +102,9 @@
     "\n",
     "n_detections = {k: 0 for k in all_detectors}\n",
     "for detector_name in all_detectors:\n",
-    "    if detector_name == 'STUDD':\n",
+    "    if detector_name == \"STUDD\":\n",
     "        continue\n",
-    "        \n",
+    "\n",
     "    detector = getattr(detectors, detector_name)()\n",
     "\n",
     "    for i in range(2000):\n",
