docs: improve contributing guide for docs

--- a/notebooks/03_pytorch.ipynb
+++ b/notebooks/03_pytorch.ipynb
@@ -345,7 +345,7 @@
     "    def __str__(self):\n",
     "        return str(self.model)\n",
     "\n",
-    "    def CLI_help(self):\n",
+    "    def cli_help(self):\n",
     "        return str(\n",
     "            'schema=None, random_seed=1, nn_model: nn.Module = None, optimizer=None, loss_fn=nn.CrossEntropyLoss(), device=(\"cpu\"), lr=1e-3'\n",
     "        )\n",
