--- a/notebooks/06_advanced_API.ipynb
+++ b/notebooks/06_advanced_API.ipynb
@@ -387,7 +387,7 @@
     "### 1.1 Checking the hyperparameters for the MOA CLI\n",
     "\n",
     "* MOA objects can be parametrized using the MOA CLI (Command Line Interface)\n",
-    "* Sometimes you may not know the relevent parameters for ```moa_learner```,  ```moa_learner.CLI_help()``` presents all the hyperparameters available for the ```moa_learner``` object."
+    "* Sometimes you may not know the relevent parameters for ```moa_learner```,  ```moa_learner.cli_help()``` presents all the hyperparameters available for the ```moa_learner``` object."
    ]
   },
   {
@@ -438,7 +438,7 @@
     "\n",
     "arf = MOAClassifier(schema=stream.get_schema(), moa_learner=AdaptiveRandomForest)\n",
     "\n",
-    "print(arf.CLI_help())"
+    "print(arf.cli_help())"
    ]
   },
   {
@@ -901,7 +901,7 @@
     "    def __str__(self):\n",
     "        return str(self.model)\n",
     "\n",
-    "    def CLI_help(self):\n",
+    "    def cli_help(self):\n",
     "        return str(\n",
     "            'schema=None, random_seed=1, nn_model: nn.Module = None, optimizer=None, loss_fn=nn.CrossEntropyLoss(), device=(\"cpu\"), lr=1e-3'\n",
     "        )\n",
