--- a/notebooks/parallel_ensembles.ipynb
+++ b/notebooks/parallel_ensembles.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f8cce492",
    "metadata": {
     "execution": {
@@ -133,12 +133,12 @@
     }
    ],
    "source": [
-    "print(ozabag_sequential.CLI_help())"
+    "print(ozabag_sequential.cli_help())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "44663fbf",
    "metadata": {
     "execution": {
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "print(ozabag_mb_parallel.CLI_help())"
+    "print(ozabag_mb_parallel.cli_help())"
    ]
   },
   {
